--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,12 +6,14 @@
 	"author": "Gabriel Ferreira <gabriel@lightup.com.br>",
 	"license": "MIT",
 	"scripts": {
-		"start": "DEBUG=express:* babel-watch index.js"
+		"start": "DEBUG=express:* babel-watch index.js",
+		"migrate": "node_modules/.bin/sequelize db:migrate"
 	},
 	"dependencies": {
 		"body-parser": "^1.18.3",
 		"dotenv": "^6.2.0",
 		"express": "^4.16.4",
+		"express-validator": "^5.3.1",
 		"pg": "^7.8.0",
 		"sequelize": "^4.42.0"
 	},
