--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,6 +6,7 @@
 	"author": "Gabriel Ferreira <gabriel@lightup.com.br>",
 	"license": "MIT",
 	"scripts": {
+		"alias": "link-module-alias",
 		"start": "DEBUG=express:* babel-watch index.js",
 		"migrate": "node_modules/.bin/sequelize db:migrate"
 	},
@@ -15,6 +16,7 @@
 		"compression": "^1.7.3",
 		"dotenv": "^6.2.0",
 		"express": "^4.16.4",
+		"jsonwebtoken": "^8.4.0",
 		"pg": "^7.8.0",
 		"sequelize": "^4.42.0"
 	},
@@ -22,6 +24,20 @@
 		"babel-cli": "^6.26.0",
 		"babel-preset-es2015": "^6.24.1",
 		"babel-watch": "^2.0.8",
+		"link-module-alias": "^1.1.6",
 		"sequelize-cli": "^5.4.0"
+	},
+	"_moduleAliases": {
+		"@root": ".",
+		"@app": "app",
+		"@config": "config",
+		"@database": "database",
+		"@controllers": "app/controllers",
+		"@helpers": "app/helpers",
+		"@models": "app/models",
+		"@repositories": "app/repositories",
+		"@routes": "app/routes",
+		"@services": "app/services",
+		"@middlewares": "app/middlewares"
 	}
 }
