--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,8 +1,9 @@
 DB_DIALECT=postgres
-DB_HOST=localhost
-DB_PORT=3000
-DB_NAME=express_api
-DB_USER=postgres
-DB_PASSWORD=postgres
+DB_HOST=
+DB_PORT=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
 
 NODE_ENV=
+SECRET=
