--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,7 +7,7 @@
 	"license": "MIT",
 	"scripts": {
 		"alias": "link-module-alias",
-		"start": "DEBUG=express:* babel-watch index.js",
+		"start": "yarn alias && DEBUG=express:* babel-watch index.js",
 		"migrate": "node_modules/.bin/sequelize db:migrate"
 	},
 	"dependencies": {
