--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,19 +6,22 @@
 	"author": "Gabriel Ferreira <gabriel@lightup.com.br>",
 	"license": "MIT",
 	"scripts": {
-		"alias": "link-module-alias",
-		"start": "yarn alias && DEBUG=express:* babel-watch index.js",
+		"start": "DEBUG=express:* babel-watch index.js",
 		"migrate": "node_modules/.bin/sequelize db:migrate"
 	},
 	"dependencies": {
+		"aws-sdk": "^2.415.0",
 		"bcrypt": "^3.0.4",
 		"body-parser": "^1.18.3",
 		"compression": "^1.7.3",
 		"dotenv": "^6.2.0",
 		"express": "^4.16.4",
 		"jsonwebtoken": "^8.4.0",
+		"multer": "^1.4.1",
+		"multer-s3": "^2.9.0",
 		"pg": "^7.8.0",
-		"sequelize": "^4.42.0"
+		"sequelize": "^4.42.0",
+		"uuid": "^3.3.2"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
@@ -26,18 +29,5 @@
 		"babel-watch": "^2.0.8",
 		"link-module-alias": "^1.1.6",
 		"sequelize-cli": "^5.4.0"
-	},
-	"_moduleAliases": {
-		"@root": ".",
-		"@app": "app",
-		"@config": "config",
-		"@database": "database",
-		"@controllers": "app/controllers",
-		"@helpers": "app/helpers",
-		"@models": "app/models",
-		"@repositories": "app/repositories",
-		"@routes": "app/routes",
-		"@services": "app/services",
-		"@middlewares": "app/middlewares"
 	}
 }
