--- a/packages/server/.babelrc
+++ b/packages/server/.babelrc
@@ -1,4 +1,15 @@
 {
-  "presets": ["env"],
-  "plugins": ["transform-object-rest-spread"]
+  "presets": [
+    [
+      "env", {
+        "targets": {
+          "node": "current"
+        }
+      }
+    ]
+  ],
+  "plugins": [
+    "transform-object-rest-spread",
+    "add-module-exports"
+  ]
 }
