(server)-bugfix/ajustado implementação do sentry

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,3 +1,5 @@
+NODE_ENV=
+
 DB_DIALECT=postgres
 DB_HOST=
 DB_PORT=
@@ -5,8 +7,7 @@ DB_NAME=
 DB_USER=
 DB_PASSWORD=
 
-NODE_ENV=
-SECRET=
+SECRET_API_KEY=
 
 STORAGE_BUCKET=
 STORAGE_SECRET_ACCESS_KEY=
