(server)-feature/criado serviço de envio de e-mail

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -18,3 +18,10 @@ SENTRY_DSN=
 SEEDER_USER_NAME=
 SEEDER_USER_EMAIL=
 SEEDER_USER_PASS=
+
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASS=
+EMAIL_FROM=
+EMAIL_USER_FROM=
