--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,9 +21,11 @@
 		"compression": "^1.7.3",
 		"dotenv": "^6.2.0",
 		"express": "^4.16.4",
+		"handlebars": "^4.1.0",
 		"jsonwebtoken": "^8.4.0",
 		"multer": "^1.4.1",
 		"multer-s3": "^2.9.0",
+		"nodemailer": "^5.1.1",
 		"pg": "^7.8.0",
 		"sequelize": "^4.42.0",
 		"uuid": "^3.3.2"
